# esp32_cellular_integration

./: .gitmodules  sdkconfig.defaults
components/cellular-interface/: CMakeLists.txt  Kconfig
components/cellular-interface/include/: cellular_config.h  cellular_platform.h
components/cellular-interface/source/: cellular_platform.c  comm_if_sensorhub.c
